Update Training Materials page

--- a/training-materials.html
+++ b/training-materials.html
@@ -462,17 +462,21 @@
                         <iframe class="video-frame" src="https://www.youtube.com/embed/8nMLWd55dvg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>                    
                     <h4>Full Ukraine Data Platform Training</h4>
-                    <p>This training lasts approximitely 102 minutes and provides a full run through of the basic functionalities of the system for all users.</p>
+                    <img src="assets/images/coming-soon-placeholder.png" alt="Training video coming soon">
+                    <!-- <p>This training lasts approximitely 102 minutes and provides a full run through of the basic functionalities of the system for all users.</p>
                     <div class="video-container">
                         <iframe class="video-frame" src="https://www.youtube.com/embed/m3e9vy5YAxE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
+                    </div> -->
                     <h4>Ukraine Data Platform Release 4.0 changes</h4>
                     <p>This training lasts approximitely 9 minutes and focuses on the changes that will be released into the Ukraine data platform as part of the fourth release on the 22nd of February.</p>
                     <div class="video-container">
                         <iframe class="video-frame" src="https://www.youtube.com/embed/sP9xGKf7Oyw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
-                </section>
+                </div>
+            </section>
+
             <section id="deduplicationvid" class="y-target">
+                <div>
                     <h4>De-duplication of Sponsor Records and further system updates</h4>
                     <p>This training lasts approximately 48 minutes and focuses on the de-duplication of Sponsor Records and further system updates.</p>
                 </div>
@@ -513,7 +517,7 @@
         <div class="article-divider"></div>
         <article id="deduplication" class="y-target">
           <section id="relationships-host" class="y-target">
-            <h2>De Duplication of Sponsor Records</h2>      
+            <h2>De-duplication of Sponsor Records</h2>      
             <p>This is a standalone update to the system.  Once the de-duplication process has been completed, there shouldn’t be a need to use the process again.  All new data feeds will automatically de-duplicate the data.</p>  
             <p>A step-by-step video guide is available here: <a href="#deduplicationvid">De-duplication of Sponsor Records and further system updates | Ukraine Data Platform</a></p>  
                 <h3>Relationships of host/sponsors to applicants</h3>
