reactivated download link

--- a/user-guide.html
+++ b/user-guide.html
@@ -170,9 +170,9 @@
         <h1>Data Platform User Guide</h1>
          <section>
             <h2 id="download-copy" class="y-target">Download a copy of the User Guide</h2>
-            <p>An offline copy of the latest User Guide will be available to download by the 03/11/2023</p>
-           <!---<p>If you need to download a copy of the latest version of the User Guide click on the link below:</p>
-            <a href="assets/documents/data-platform-user-guide-v14-27-09-23.docx">Data Platform User Guide - Version 14 - Updated 27-09-2023</a> -->
+            <!---<p>An offline copy of the latest User Guide will be available to download by the 03/11/2023</p>-->
+           <p>If you need to download a copy of the latest version of the User Guide click on the link below:</p>
+            <a href="assets/documents/data-platform-user-guide-v15-08-11-2023.docx">Data Platform User Guide - Version 15 - Updated 08-11-2023</a> 
             <div class="vspacer"></div>
         </section>
         <section>
