--- a/user-guide.html
+++ b/user-guide.html
@@ -172,7 +172,7 @@
             <h2 id="download-copy" class="y-target">Download a copy of the User Guide</h2>
             <!---<p>An offline copy of the latest User Guide will be available to download by the 03/11/2023</p>-->
            <p>If you need to download a copy of the latest version of the User Guide click on the link below:</p>
-            <a href="assets/documents/data-platform-user-guide-v15-08-11-2023.docx">Data Platform User Guide - Version 15 - Updated 08-11-2023</a> 
+            <a href="assets/documents/data-platform-user-guide-v16-16-11-2023.docx">Data Platform User Guide - Version 16 - Updated 16-11-2023</a> 
             <div class="vspacer"></div>
         </section>
         <section>
@@ -309,6 +309,12 @@
                     <td>
                         <p>Updated: The Homes for Ukraine Data Platform (HfU); Summary of roles; overview of the system windows, tabs and navigation; Individiual records; Household; Sponsor; Searching for a record outside of your local authority; Welcome Centre checks; initial ‘Check in’ checks; Second Checks; Bulk updates to checks; Using Case Notes; Updating the Case notes and activities check boxes; Updating the applicants check box; Updating / Creating a housing need; Creating a new housing need; Local Authority Responsibilities; Offered Property tab; move on search; reservation process; to view all reserved hosts and properties that reside in your LA; Creating a new placement record; updating and existing placement tracking; updating multiple records with the same journey status; adding an applicant to a household group; cross border re-assignment across UK national borders (either scheme); if the household record is not assigned to your local authority; Adding a new Sponsor/Host; Adding Host Addresses; Searching for an offered Property; Hosts with multiple addresses; Removing a host/sponsor when the household is a no show; Recording additional sponsor household members; Handling duplicate applicant records; Rejected/ withdrawn Sponsor/hosts; Handling Fake Sponsors; Duplicate Hosts with no approved applicants attached; how the process works- in summary; Individual Sponsor Scheme(Homes for Ukraine)</p>
                         <p>Added: Workaround for host addresses that haven’t generated an offered property tab </p>
+                    </td>
+                </tr>
+                <tr><td>V16</td>
+                    <td>16/11/2023</td>
+                    <td>
+                        <p>Updated: Searching for a record outside of your local authority</p>
                     </td>
                 </tr>
             </table>
@@ -782,14 +788,15 @@
             <ol>
                 <li>Click on <b>Search Applicants from other LA's</b> which is listed under People in the left-hand navigation bar.</li>
                 <img src="assets/images/search-applicants-left-hand.png" alt="screenshot of left hand navigation bar with Search Applicants highlighted">
-                <li>Once the search screen has opened you be able to search by entering the applicant details into the search box.</li>
+                <li>Once the search screen has opened you will be able to search by entering the applicant details into the search box.</li>
                 
                  
                 <img src="assets/images/applicants-search-screen.png" alt="">
                 </li>
                 <li>Type full or part of the person’s name in the search box using a minimum of 3 characters.  This search does not use wildcard characters and will return a maximum of 200 lines of data.</li>
             </ol>
-            <p><b>Please note:</b> You are still unable to access records that sit outside of your local authority, but you can use the information provided to contact the owning local authority and discuss any appropriate action.  A list of Data Champions can be provided.</p>
+            <p><b>Please note:</b> You are still unable to access records that sit outside of your local authority, but you can use the information provided to contact the owning local authority and discuss any appropriate action.  A list of Data Champions can be provided. If you locate a record that says it is in ‘HfU Prod SA’ or it says the Local Authority is ‘orgbc5bf7b2’ you should email the contact centre at wnsadmin@cardiff.gov.uk to have the record reassigned to your LA. </p>
+            <p>Important: If you cannot find the record after using both the top search bar and the search applicants tab, but you are aware of an applicant having arrived in Wales, you should email the contact centre to query if this could be a cross border reassignment and follow the process for that.</p>
 
             <h3 id="welcome-centre-checks" class="y-target">Welcome Centre Checks</h3>
             <p>When a person or household group arrives at a Welcome Centre / Initial Accomodation, there are several checks that need to take place before they are ready to be matched to suitable accommodation. These are grouped into separate  checklists. </p>
