applicant journey video added

--- a/training-materials.html
+++ b/training-materials.html
@@ -54,6 +54,7 @@
                 <li><a href="#creating-new-host">How to Create a Host Record</a></li>
                 <li><a href="#changing-the-lead-applicant">Changing the Lead Applicant</a></li>
                 <li><a href="#editing-columns-and-filters">Editing columns and filters and creating views</a></li>
+                <li><a href="#applicant-journey">Applicant Journey Story - From IS01-IS05</a></li>
             </ul>
         </details>
         <details>
@@ -604,6 +605,63 @@
                     <p>If you filter one it will take the filter off the other one. Once I've done that, I can see there's a star again. So that means that if I come out of this it will not save. </p>
                     <p>So, what you need to do is just go back in and save changes to current view. </p>
                     <p>Once you've done that, you'll get a notification to say they've been saved and then your view is there. So you'll always be able to view it and you can always manipulate that if you need to at any time to change the views. </p>
+
+                </div>
+            </section>
+            <section id="applicant-journey" class="y-target">
+                <div>
+                    <h3>Applicant Journey Story - From IS01 - IS05</h3>
+                </div>
+                <div class="video-container">
+                    <iframe class="video-frame" src="https://www.youtube.com/embed/oMm6jJ_O1vU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="transcript">
+                    <h4>Video transcript</h4>
+                    <p>In this video I'm going to demonstrate how to use the system to record an applicant's journey from when they arrive in Wales right up to their current situation.</p>
+
+                    <p>So, we're going to use an example of an applicant who has just arrived and is going to a sponsor/host placement, and it will be the sponsor who has sponsored their application who will be hosting them at their own address. So do this, you just go to the Applicant table here, select the record you want to work on, and you will see you come into the applicant page so you can see their journey status at the moment is ISO1 visa and Host approved.</p>
+
+                    <p> They've got no complex case and we've got all the details there. So, we're going to go into the household ID, and you can see here that this host on the household page on the general tab is the sponsor for the record. There is, this is existing data with this person has sponsored the individual's application for them to come over to Wales.</p>
+
+                    <p>So, in this instance you don't need to use the move on search and reservation process to link the host or sponsor because its existing data. You can create the placement tracking straight out of the household record. If for instance this individual wasn't going to host the applicants, you would need to go into the Move on search tab and complete the reservation process to reserve a new host.</p>
+
+                    <p> So, first things first, you go into placement tracking and you're going to create a new placement tracking. So, we select Sponsor/host, and it will auto populate the details here on the right hand side going to select the date as the 1st of May and then that is all you need to do at this moment in time to create this placement tracking. Once you save and close then you will see the placement tracking has been created. If you give the system about 30 to 60 seconds to load everything through the flows will run in the background, creating the placement track in on the Applicant page and the Sponsor page.</p>
+
+                    <p>So going back to the General and go into the lead Applicant page. Whilst we're waiting for that to happen, we're just going to update the journey status. It's really important that you do that every time you create a PT to make sure that the Journey status reflects the current hosted situation of the applicant.</p>
+
+                    <p> So, they're visa, and host approved at the moment and we're going to do placed with host family and change that to active and then just click save.</p>
+
+                    <p> So, if I go into the placement tracking's now, you can see that the applicant has a sponsor host placement tracking for the 1st of May with the host here.</p>
+
+                    <p> And then if I go into the host by clicking on the hyperlink, you'll see two placement tracking's. On the sponsor record or the host record, you will always see two placement tracking's, one for the applicant and then one for the household of that applicant.</p>
+
+                    <p> So if for instance there were three members of the household, you'd see three placement tracking's with the names of the applicant and then one that has no name because it's the household. So that is how you create the sponsor/host placement tracking for this particular journey status. So, if I go back into the applicant record then and we're going to say for an example that this person comes to you a few months later and says I've got a job, I'm self-supporting myself and I'd like to move out into private rental.</p>
+
+                    <p> So, all you need to do here is again go back into the household ID, go to placement tracking and we're going to go into the sponsor/host record first and give it a move on reason because we're going to be ending this placement tracking to create the new one. So, we're going to put placement completed successfully in this instance and save and close that and now you will see the reason here. You can do this retrospectively, you don't need to do it in this order, but it is good practise to put the move on reason in before you create the new placement tracking which is going to end this current placement tracking.</p>
+
+                    <p> So, if they're moving to self-supported accommodation, just select new placement tracking, we'll go to move on accommodation and let's just say they moved in July and then we're just going to type in our local authority here and then we can put the address. It won't populate any information here because it's not host or sponsor record, but you can put the address here for the rented property.</p>
+
+                    <p>So, let's just say 15 test road and I'm just going to pop a little note to say self-supporting here and then you just save and close. OK. You're going to want to give the system about 30 to 60 seconds to update because this is running a flow to end the previous placement tracking and the creation of the new placement tracking which we can see here.</p>
+
+                    <p>So again, if I go back to General, go to Damien Yates's profile and then go to the journey status and we're going to select move on and then we can change the status reason here to self-supporting. So, you can see move on self-supporting and you can just save that.</p>
+
+                    <p> So, if I go into the applicant now, you can see that the placement tracking has been ended for the sponsor/host on the 5th of July and then opened for move on accommodation on the same day.</p>
+
+                    <p> This date will always be the same because the person will move on that same day.</p>
+
+                    <p> So, if I just go into Terry Thompson now and go to his placement tracking, you can see two closed placement tracking's for the household and the individual there.</p>
+
+                    <p> So, there'll be no applicants linked here now because the placement tracking have removed that link. So, if Terry turned around and said he doesn't want to host anymore and he wants to withdraw his application to be a host, you can just select him as withdrawn, keep it as active, click save and close and I'll just need to go back into that record, and you can see now that record is inactive.</p>
+
+                    <p> OK, so back to Damien Yates. So, we've got him as a move on self-supporting and we've got a placement tracking open on the household there.</p>
+
+                    <p> So, if then, current day now you get a phone call or, you get a notification that Damian has decided to repatriate and return to Ukraine. There's a few things you need to do on the record before you repatriate a record and that is purely because you will lose access to the record as you put the information in. So first of all, we're going to go back to the applicant page, and we are going to keep the status as move on because the person has moved on. But we are going to update the status reason as repatriation.</p>
+
+                    <p> So that's all you need to do on the record here and just click save. If I go back to the household page, if you had multiple applicants and you wanted to change the status, you can select multiple here and click edit. So, if I select one, you'll see Click edit and you can change all the status for all the records that you are selecting.</p>
+
+                    <p> So, you can see there's no sponsor host here. All we want to do is create the Repatriation placement tracking now. So, if I go to Placement Tracking, select new and then select repatriation and then the date as yesterday's date, now the local authority won't be your local authority this time, you need to put it into the outside of the UK area, so it's called the Org Business unit. So, to do that you just have an open bracket, outside of the UK and then you can put returns to Ukraine in the address.</p>
+
+                    <p> OK, and then once you save and close that again we're going to wait about 60 seconds. You can see that the placement truck is being created, but we need to give it a little bit of time to load. So, to make sure that the flows run through and all other placement tracking's are closed and the record will move into what I said is the org business unit, meaning you won't have access to it once you've completed these steps. This is why we updated the status first this time, so that we could complete those steps before we lose the record.</p>
 
                 </div>
             </section>
