--- a/latest-news.html
+++ b/latest-news.html
@@ -35,6 +35,7 @@
         <details>
             <summary class="chapter">News articles</summary>
             <ul>
+                <li><a href="#ih-updatenov23">Ukraine Data Platform November Update</a></li>
                 <li><a href="#udp-queries">Ukraine Data Platform Queries</a></li>
                 <li><a href="#changes-cross-boundary">Changes to Cross Boundary Re-matching Process</a></li>
                 <li><a href="#newsletter-9">Announcing our new information hub</a></li>
@@ -74,6 +75,19 @@
             All article tags need a unique id and a class="y-target"
             All news articles need a <p> underneath the <h2> as follows:
             <p class="published-author">Published on [PUBLICATION DATE] &nbsp | &nbsp Written by [AUTHOR'S NAME]</p> -->
+            <article id="rih-updatenov23" class ="y-target">
+                <h2>Ukraine Data Platform November Update</h2>
+                <p class="published-author">Published on 28 November 2023 &nbsp | &nbsp Written by Joshua Dickinson</p>
+                <p>We would like to make you aware of the recent updates to the content on this site.</p>
+
+                <p>The user guide has had a refresh to ensure the content is relevant with the UDP - if you work from a downloaded version, please ensure you access the site to download the latest copy.</p>
+
+                <p>We have recorded and replaced several of the bitesize training videos (with some additions added too). Please take a look when you some spare time - each video is between 5-8 minutes long.</p>
+
+                <p>We have also made changes to our FAQ section - we'd like to stress the importance of the FAQs as a 'go-to' tool for any initial questions you have. These have been adapted off the back of your mailbox queries and capture all the common issues we experience weekly. Should the FAQs or User Guide not answer your question then please contact us via the nationofsanctuarysurvey@gov.wales mailbox.</p>
+   
+            </article>
+            
             <article id="release-note-6" class ="y-target">
                 <h2>Release Note – 05 July 2023</h2>
                 <p class="published-author">Published on 06 July 2023 &nbsp | &nbsp Written by Joshua Dickinson</p>
