trying to fix applicant journey video

--- a/training-materials.html
+++ b/training-materials.html
@@ -613,7 +613,7 @@
                     <h3>Applicant Journey Story - From IS01 - IS05</h3>
                 </div>
                 <div class="video-container">
-                    <iframe class="video-frame" src="https://www.youtube.com/embed/oMm6jJ_O1vU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://drive.google.com/file/d/1apelrZTZ83_176vmu5chtlHEzRVLYzfn/preview" width="640" height="480"></iframe>
                 </div>
                 <div class="transcript">
                     <h4>Video transcript</h4>
