--- a/training-materials.html
+++ b/training-materials.html
@@ -613,7 +613,7 @@
                     <h3>Applicant Journey Story - From IS01 - IS05</h3>
                 </div>
                 <div class="video-container">
-                    <iframe src="https://drive.google.com/file/d/1apelrZTZ83_176vmu5chtlHEzRVLYzfn/preview" width="640" height="480"></iframe>
+                    <iframe src="https://drive.google.com/file/d/1apelrZTZ83_176vmu5chtlHEzRVLYzfn/preview"></iframe>
                 </div>
                 <div class="transcript">
                     <h4>Video transcript</h4>
