--- a/training-materials.html
+++ b/training-materials.html
@@ -612,9 +612,9 @@
                 <div>
                     <h3>Applicant Journey Story - From IS01 - IS05</h3>
                 </div>
-                <div class="video-container">
-                    <iframe src="https://drive.google.com/file/d/1apelrZTZ83_176vmu5chtlHEzRVLYzfn/preview"></iframe>
-                </div>
+
+                    <iframe src="https://drive.google.com/file/d/1apelrZTZ83_176vmu5chtlHEzRVLYzfn/preview" width="640" height="480"></iframe>
+
                 <div class="transcript">
                     <h4>Video transcript</h4>
                     <p>In this video I'm going to demonstrate how to use the system to record an applicant's journey from when they arrive in Wales right up to their current situation.</p>
