fixed sponsor video

--- a/training-materials.html
+++ b/training-materials.html
@@ -394,9 +394,7 @@
                 <div>
                     <h3>Overview of the Sponsor and Sponsor Household Section</h3>
                 </div>
-                <div class="video-container">
-                    <iframe class="video-frame" src="https://www.youtube.com/embed/soixFwh6RpU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
+                <iframe src="https://drive.google.com/file/d/1J6SEKtDbN7sdGE3Z1HVUSoL9mEyGGbB3/preview" width="640" height="480"></iframe>
                 <div class="transcript">
                     <h4>Video transcript</h4>
                     <p>This is a short video to give you an overview of the Sponsor and Sponsor Household section of the UDP and how to navigate through those records and pages within the system. So, on the Home tab it will automatically default to the Applicant section. You just need to go down on the left-hand side here to the Sponsor section and click there and you will see all active sponsors and hosts within the system.</p>
