--- a/user-guide.html
+++ b/user-guide.html
@@ -172,7 +172,7 @@
             <h2 id="download-copy" class="y-target">Download a copy of the User Guide</h2>
             <!---<p>An offline copy of the latest User Guide will be available to download by the 03/11/2023</p>-->
            <p>If you need to download a copy of the latest version of the User Guide click on the link below:</p>
-            <a href="assets/documents/data-platform-user-guide-v16-16-11-2023.docx">Data Platform User Guide - Version 16 - Updated 16-11-2023</a> 
+            <a href="assets/documents/data-platform-user-guide-v17-13-05-2025.docx">Data Platform User Guide - Version 16 - Updated 16-11-2023</a> 
             <div class="vspacer"></div>
         </section>
         <section>
@@ -315,6 +315,11 @@
                     <td>16/11/2023</td>
                     <td>
                         <p>Updated: Searching for a record outside of your local authority</p>
+                    </td>
+                      <tr><td>V17</td>
+                    <td>13/05/2025</td>
+                    <td>
+                        <p>References to the Case Management Team, and their email address, updated to National Advisory Service.</p>
                     </td>
                 </tr>
             </table>
