updated dead links

--- a/latest-news.html
+++ b/latest-news.html
@@ -230,7 +230,7 @@
             <h2>Announcing our new information hub</h2>
             <p class="published-author">Published on 31 October 2022 &nbsp | &nbsp Written by Joshua Dickinson</p>   
             <p>Since the launch of the Homes for Ukraine Data Platform (UDP), we have been working to improve how we share our training, user guides and other UDP based information with you that ensures access for all.</p>
-            <p>This week, we went live with the new UDP Documentation and Information Hub which can be accessed via this link - <a href="https://ukrainedataplatform.github.io/documentation/">Ukraine Data Platform and Information Hub</a></p>
+            <p>This week, we went live with the new UDP Documentation and Information Hub which can be accessed via this link - <a href="https://ukrainedataplatform.github.io/training-and-guidance/">Ukraine Data Platform and Information Hub</a></p>
             <p>We have tried to make the user guide easier to navigate on the site and have added our new ‘bite size’ training videos to help with key aspects of using the platform. You can also find previous versions of our Newsletter and other helpful information on system updates.</p>
             <p>Grab a cuppa and take a quick look!  If you can think of ways that we can improve the Hub, please let us know via the Nation of Sanctuary Survey mailbox.  </p>
             <h3>Policy clarifications</h3>
@@ -470,7 +470,7 @@
             <h3>Accessing documentation</h3>
             <p>We are currently reviewing the way we present documentation about the Data Platform to you. It has come to our attention that not everyone is able to access the user guide, training collateral and other supporting materials hosted on Google Drive. We are exploring other hosting options and we need your help in finding a suitable solution.</p>
             <p>We have prepared the following test page hosted on GitHub and we would like you to tell us by reply whether you can open it successfully in your organisation:</p>
-            <p><a href="https://ukrainedataplatform.github.io/SupportModel">https://ukrainedataplatform.github.io/SupportModel</a></p>
+            <p><a href="https://ukrainedataplatform.github.io/training-and-guidance/SupportModel">https://ukrainedataplatform.github.io/training-and-guidance/SupportModel</a></p>
             <p>A handful of local authorities have already told us that it works for them, so if your organisation is not in the list below, please test the link and tell us if you can access it by replying to this email.</p>
             <ul>
                 <li>Cardiff</li>
@@ -603,7 +603,7 @@
             <p>Feedback has been positive, so we hope you are continuing to find them helpful as you and your colleagues begin to navigate the data platform.</p>
             <p>We are now developing the outstanding content for the User Guide Annexes and will begin to record the bite size videos to support new users coming onto the system.</p>
             <p>The recording of the training session that we delivered on 14 July is now available and you can access it here: <a href="https://www.youtube.com/watch?v=euvWpjoX6rs">Ukraine Data Platform - Super User Training Session</a></p>
-            <p>We have been reviewing the questions that arose during our training and drop-in support sessions, and we will be updating our <a href="https://ukrainedataplatform.github.io/FAQ/">Data Platform FAQ</a> with answers to these shortly.</p>
+            <p>We have been reviewing the questions that arose during our training and drop-in support sessions, and we will be updating our <a href="https://ukrainedataplatform.github.io/training-and-guidance/FAQ/">Data Platform FAQ</a> with answers to these shortly.</p>
             <h3>Data update</h3>
             <h4>Sponsorship scheme statistics</h4>
             <p>The UK Government regularly publishes statistics about people coming to the UK from Ukraine through its various sponsorship routes.</p>
@@ -652,7 +652,7 @@
             <p>The development team are hosting drop-in calls for new users to join between 10:30 and 11:30 on Thursday and Friday this week, and Monday to Friday during the week commencing 25 July.</p>
             <p>These sessions are intended for you to tell the team about any issues you have encountered and receive “live” support as you begin to use the system.</p>
             <p>Invitations to the drop-in calls have been sent out to all local data platform champions (see attached list), so please ask yours if you want to attend a particular session.</p>
-            <p>We have also published a <a href="https://ukrainedataplatform.github.io/FAQ/">Data Platform FAQ</a> Data Platform FAQ, which helps to answer some of the common questions that have emerged during user training and testing.</p>
+            <p>We have also published a <a href="https://ukrainedataplatform.github.io/training-and-guidance/FAQ/">Data Platform FAQ</a> Data Platform FAQ, which helps to answer some of the common questions that have emerged during user training and testing.</p>
         </article>
 
         <div class="article-divider"></div>
